# dm-utils

./: CMakeLists.txt  README.md
include/: DmEasyPoolST.hpp  DmExceptions.hpp  DmGarbageCollector.hpp  DmTimedConsumerMT.hpp  DmTypedefs.hpp  FastMemoryPool.hpp  LockingQueue.hpp  MathUtilities.hpp  MemoryPool.hpp  MutexDefines.hpp  NullMutex.hpp  RefCounted.hpp  RingBuffer.hpp  Singleton.hpp  StdAlgorithms.hpp  StringUtilities.hpp
src/apple/: StringUtilitiesMac.mm
src/linux/: StringUtilitiesLinux.cpp
test/: CMakeLists.txt
test/memoryTests/: CMakeLists.txt  memoryUsageMT.cpp
