CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../../include/")

ADD_EXECUTABLE(memoryUsageMT "${CMAKE_CURRENT_SOURCE_DIR}/memoryUsageMT.cpp")
ADD_DEPENDENCIES(memoryUsageMT dm-utils dm-log)
TARGET_LINK_LIBRARIES(memoryUsageMT dm-utils dm-log)
SET_TARGET_PROPERTIES(memoryUsageMT PROPERTIES LINK_FLAGS "${DM_UTILS_LINK_FLAGS} ${DM_LOG_LINK_FLAGS} ")
FSET_TARGET_OPTIONS(memoryUsageMT "")
